system/monitoring/templates/otel-service.yaml
# system/monitoring/templates/otel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipiece-monitoring-otel
  labels:
    app.kubernetes.io/instance: { { .Release.Name } }
    app.kubernetes.io/name: otel
    component: agent-collector
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: { { .Release.Name } }
    app.kubernetes.io/name: otel
    component: agent-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
